# syswarden

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  architecture.md  brain.config.json  install.sh  opus-prompt.md  planning.md  uninstall.sh
.claude/: settings.json
.claude/hooks/: post_response.sh  pre_prompt.sh
docs/: usage.md
docs/adr/: ADR-001-language-rust.md  ADR-002-psi-over-raw-ram.md  ADR-003-systemd-cgroups.md  ADR-004-dry-run-default.md  ADR-005-jsonl-history.md  ADR-006-no-network-no-telemetry.md  ADR-007-mandatory-safety-gate.md  ADR-008-tokio-minimal.md  ADR-009-persistent-dropin-aggressive-gating.md
examples/: config.balanced.toml  config.low_ram.toml
examples/fixtures/: pressure_cpu.sample  pressure_io.sample  pressure_memory.sample  proc_loadavg.sample  proc_meminfo.sample  proc_pid_stat.sample  proc_pid_status.sample  proc_stat.sample
packaging/aur/: PKGBUILD
packaging/systemd/: syswarden.service
scripts/: setup-root.sh  test-live.sh
scripts/profiles/: _bootstrap.sh  activate-balanced.sh  activate-conservative.sh  activate-desktop.sh  activate-developer.sh  activate-low_ram.sh  activate-performance.sh  activate-server.sh
src/: cli.rs  daemon.rs  error.rs  lib.rs  main.rs
src/actions/: mod.rs
src/cgroups/: mod.rs
src/config/: mod.rs
src/explain/: mod.rs
src/history/: mod.rs
src/logging/: mod.rs
src/metrics/: cpu.rs  io.rs  memory.rs  mod.rs
tests/: actions_dryrun_tests.rs  config_tests.rs  daemon_smoke_tests.rs  policy_tests.rs  pressure_tests.rs  rollback_tests.rs  safety_tests.rs  v03_integration_tests.rs
(+16 files in other folders)
